feat: spring core翻译至5.4.3

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -8102,33 +8102,99 @@ Spring AOP包括以下类型的通知：
 
 ## 5.2. Spring AOP功能和目标
 
+Spring AOP用纯Java中实现。不需要特殊的编译处理。Spring AOP不需要控制类加载程序层次结构，因此适用于Servlet容器或应用程序服务器。
 
+Spring AOP当前仅支持方法执行连接点（通知Spring bean方法执行）。尽管可以添加对字段拦截的支持，而不会破坏Spring AOP核心 API，但未实现字段拦截。如果您需要通知字段访问并更新连接点，请考虑一种语言，例如AspectJ。
 
+Spring AOP的AOP方法与大多数其他AOP框架的方法不同。目的不是提供最完整的AOP实现（尽管Spring AOP非常有能力）。相反，目的是提供AOP实现和Spring IOC之间的密切集成，以帮助解决企业应用程序中的共同问题。
 
+因此，例如，Spring框架的AOP功能通常与Spring IOC容器结合使用。通过使用普通的Bean定义语法配置切面（尽管这允许强大的“auto-proxying”功能）。这与其他AOP实现非常不同。您不能使用Spring AOP轻松或有效地执行某些事情，例如通知非常细粒的对象（通常是域对象）。在这种情况下，AspectJ是最佳选择。但是，我们的经验是，Spring AOP为适用AOP企业Java应用程序中的大多数问题提供了一个绝佳的解决方案。
 
+Spring AOP从不努力与AspectJ竞争，以提供全面的AOP解决方案。我们认为，诸如Spring AOP等基于代理的框架和诸如AspectJ之类的成熟框架都是有价值的，它们是互补的，而不是互相竞争。Spring无缝将Spring AOP和IOC与AspectJ集成，以在一致的基于Spring的应用程序体系结构中启用AOP的所有用法。该集成不会影响Spring AOP API或AOP联盟API。Spring AOP保持向后兼容。
 
+> :information_source:Spring框架的中心宗旨之一是无侵入性。您不应被迫将特定于框架的类和接口引入业务或域模型。但是，在某些地方，Spring框架确实为您提供了将特定于Spring框架的依赖项引入代码库中的选项。为您提供此类选择的理由是，在某些情况下，以这种方式读取或编码某些特定功能可能很容易。但是，Spring框架（几乎）总是为您提供选择：您可以自由做出明智的决定，即哪种选项最适合您的特定用例或场景。
+>
+> 与本章相关的是讨论选择哪种AOP框架（以及AOP方式）。您可以选择AspectJ，Spring AOP或两者兼而有之。您还可以选择@AspectJ 注解风格的方法或Spring XML配置风格的方法。本章选择首先介绍 @AspectJ风格的方式，但不说明Spring团队更喜欢@AspectJ风格的方法，而不是Spring XML配置方式。
+>
+> 请参阅 [Choosing which AOP Declaration Style to Use](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-choosing)，以更完整地讨论每种样式的“来龙去脉”。
 
+## 5.3. AOP代理
 
+Spring AOP默认使用标准JDK动态代理作为AOP代理。这使得可以代理任何接口（或一组接口）。
 
+Spring AOP也可以使用CGLIB代理。这是代理类所必需的。默认情况下，如果业务对象未实现接口，则使用CGLIB代理。由于最好是为接口而不是class编程，因此业务类通常实现一个或多个业务接口。在您需要通知非接口上声明的方法或需要将代理对象作为具体类型传递给方法，可以[强制使用CGLIB](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-proxying)（希望很少见）。
 
+重要的是要掌握Spring AOP是基于代理的事实。请参阅 [Understanding AOP Proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-understanding-aop-proxies)，以彻底查阅该实现细节的实际含义。
 
+## 5.4. @AspectJ支持
 
+@AspectJ 指用带有该注解的常规Java类声明切面。@AspectJ 是由 [AspectJ project](https://www.eclipse.org/aspectj)引入的，作为AspectJ 5版本的一部分。Spring使用AspectJ 提供的库来解释与AspectJ 5相同的注解，以分析和匹配切点。但是，AOP运行时仍然是纯Spring AOP，并且对AspectJ 编译器或织入没有依赖。
 
+> :information_source:使用AspectJ 编译器和编织器允许使用完整的AspectJ 语言，并在[Using AspectJ with Spring Applications](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-using-aspectj)中讨论。
 
+### 5.4.1. 启用@AspectJ支持
 
+要在Spring配置中使用@AspectJ 切面，您需要启用Spring支持，以配置基于@AspectJ切面和 auto-proxying bean的Spring AOP，不管这些bean是否是被通知的对象。我们的意思是，通过auto-proxying，如果Spring确定bean被一个或多个切面通知，它将自动生成代理以拦截该bean的方法调用，并确保根据需要运行通知。
 
+可以使用XML或Java式配置启用@AspectJ 支持。无论哪种情况，您还都需要确保AspectJ 的aspectjweaver.jar库在您的应用程序的类中（版本1.8或更高版本）。该库可在AspectJ 发行的lib目录或Maven中央仓库中获得。
 
+**使用Java配置启用@AspectJ支持**
 
+要使用Java @Configuration启用@AspectJ 支持，请添加@EnableAspectJAutoProxy注解，如以下示例所示：
 
+```java
+@Configuration
+@EnableAspectJAutoProxy
+public class AppConfig {
 
+}
+```
 
+**使用XML配置启用@AspectJ支持**
 
+要使用基于XML的配置启用@AspectJ支持，请使用`aop:aspectj-autoproxy`元素，如下示例显示：
 
+```xml
+<aop:aspectj-autoproxy/>
+```
 
+这假设您使用 [XML Schema-based configuration](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#xsd-schemas)中所述的schema 支持。有关如何导入AOP命名空间中的标签，请参见[the AOP schema](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#xsd-schemas-aop)。
 
+### 5.4.2. 声明切面
 
+启用@AspectJ 支持后，应用程序上下文中定义的任何@AspectJ bean（具有@Aspect注解）将被Spring自动检测到并用于配置Spring AOP。接下来的两个示例显示了一个无用的切面所需的最小定义。
 
+两个示例中的第一个显示了应用程序上下文中的常规bean定义，该定义指向具有@Aspect注解的bean类：
 
+```xml
+<bean id="myAspect" class="org.xyz.NotVeryUsefulAspect">
+    <!-- configure properties of the aspect here -->
+</bean>
+```
+
+两个示例中的第二个示例显示了NotVeryUsefulAspect类定义，该定义用org.aspectj.lang.annotation.Aspect进行注解：
+
+```java
+package org.xyz;
+import org.aspectj.lang.annotation.Aspect;
+
+@Aspect
+public class NotVeryUsefulAspect {
+
+}
+```
+
+切面（用@Aspect注解的类）可以具有方法和字段，与任何其他类相同。它们还可以包含切点，通知和引入（inter-type）声明。
+
+> :information_source:**通过组件扫描自动探测切面**
+>
+> 您可以在Spring XML配置中像常规类一样注册切面类，或通过类路径扫描自动检测它们 - 与其他任何Spring管理的Bean相同。但是，请注意，@Aspect注解不足以在类路径中自动检测。为此，您需要添加一个单独的@Component注解（或者，根据Spring的组件扫描仪的规则，自定义限定的原型注解）。
+
+> :information_source:**使用其他切面通知切面？**
+>
+> 在Spring AOP中，各个切面本身不能成为其他切面的通知目标。类上的@Aspect注解将其标记为一个切面，因此，将在auto-proxying时排除。
+
+### 5.4.3. 声明切点
 
 
 
