--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -8196,6 +8196,462 @@ public class NotVeryUsefulAspect {
 
 ### 5.4.3. 声明切点
 
+切点确定了关注的连接点，从而使我们能够控制通知何时运行。Spring AOP仅支持Spring Beans的方法连接点，因此您可以将点切点视为匹配Spring Bean上的方法的执行。切点声明有两个部分：一个包含名称和任何参数的签名和一个确定了我们感兴趣的执行方法的切点表达式。在@AspectJ 注解的AOP风格中，通过常规方法定义提供了切点签名，并且通过使用@Pointcut注解来表示切点表达式（用作切点签名的方法必须具有void返回类型）。
+
+一个示例可能有助于展示切点签名和切点表达式之间的区别。下面的示例定义了一个名为anyOldTransfer的切点，该切点与任何名为transfer的方法执行匹配：
+
+```java
+@Pointcut("execution(* transfer(..))") // the pointcut expression
+private void anyOldTransfer() {} // the pointcut signature
+```
+
+构成@Pointcut注解值的切点表达式是常规的AspectJ 5切点表达式。有关AspectJ的切点语言的完整讨论，请参见 [AspectJ Programming Guide](https://www.eclipse.org/aspectj/doc/released/progguide/index.html) （以及[AspectJ 5 Developer’s Notebook](https://www.eclipse.org/aspectj/doc/released/adk15notebook/index.html)）或一本关于AspectJ 的书籍（例如Colyer et. al.编写的Eclipse AspectJ或Ramnivas Laddad编写的*AspectJ in Action*,）。
+
+**支持的切点标识符**
+
+Spring AOP支持以下用于切点表达式的切点标识符（PCD）：
+
+- `execution`: 匹配方法执行的连接点。 这是在Spring AOP中使用的主要切点标识符。
+- `within`: 连接点限制在确定的类型内（使用Spring AOP时，在匹配类型中声明的方法执行）。
+- `this`: 限制与连接点使用Spring AOP时的方法执行）的匹配（，其中bean引用（Spring AOP代理）是给定类型的实例。
+- `target`: 限制与连接点（使用Spring AOP时的方法执行）的匹配，其中目标对象（被代理的应用程序对象）是给定类型的实例。
+- `args`: 限制与连接点（使用Spring AOP时的方法执行）的匹配，其中实参是给定类型的实例。
+- `@target`: 限制与连接点（使用Spring AOP时的方法执行）的匹配，其中正在执行的对象类有给定类型的注解。
+- `@args`: 限制与连接点（使用Spring AOP时的方法执行）的匹配，其中实参的运行时类型有给定类型的注解。
+- `@within`: 连接点限制在确定的被给定注解标注的类型内（使用Spring AOP时，使用给定注解标注的类中声明的方法执行）。
+- `@annotation`:限制与连接点的匹配，其中连接点的主体（在Spring AOP中运行的方法）具有给定的注解。
+
+> **其他切点类型**
+>
+> 完整的AspectJ 语言支持Spring中不支持的其他切点标识符：`call`, `get`, `set`, `preinitialization`, `staticinitialization`, `initialization`, `handler`, `adviceexecution`, `withincode`, `cflow`, `cflowbelow`, `if`, `@this`, 和 `@withincode`。在Spring  AOP解释的切点表达式中，使用这些点切点标识符会导致抛出IllegalArgumentException。
+>
+> 在未来的发行版中，Spring AOP可能支持更多AspectJ 切点标识符。
+
+由于Spring AOP限制了仅与方法执行连接点匹配，因此先前讨论给出的切点标识符定义比您在AspectJ 编程指南中找到的更少。此外，AspectJ 本身具有基于类型的语义，并且在执行连接点时，this和target都引用相同对象：执行该方法的对象。Spring AOP是一个基于代理的系统，并区分代理对象本身（绑定this）和代理背后的目标对象（绑定target）。
+
+> :information_source:由于Spring AOP框架的基于代理的性质，目标对象中的调用不是通过拦截而是通过定义。对于JDK代理，只能拦截代理上的公共接口方法调用。使用CGLIB，可以对代理的公共和受保护的方法调用拦截（如有必要，甚至是包可见的方法）。但是，一般通过public的签名设计基于代理的交互。
+>
+> 请注意，切点定义通常与任何被拦截的方法匹配。如果严格来说，即使在存在潜在非public交互的CGLIB代理方案中，也需要相应地定义它。
+>
+> 如果您的拦截需求包括方法调用甚至是目标类中的构造函数，请考虑使用Spring驱动的[native AspectJ weaving](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-ltw)而不是Spring的基于代理的AOP框架。这构成了具有不同特征的AOP使用模式，因此请务必在做出决定之前先熟悉织入。
+
+Spring AOP还支持一个名为`bean`的额外的PCD。该PCD使您可以将连接点的匹配限制为特定命名的Spring bean或一组命名的Spring bean（使用通配符）。`bean` PCD具有以下形式：
+
+```java
+bean(idOrNameOfBean)
+```
+
+idOrNameOfBean标记可以是任何弹Spring bean的名称。提供了使用`*`字符限制的通配符支持，因此，如果您为Spring bean建立一些命名约定，则可以编写`bean` PCD表达式以选择它们。与其他切点标识符一样，`bean` PCD可以与`&&`（且），`||`（或），`！`（非）运算符一起使用。
+
+> :information_source:`bean` PCD仅在Spring AOP中受支持，而不是在native的AspectJ织入 。它是对标准PCD的特定于Spring的扩展，因此， 它不适用于使用@Aspect模式的切面声明。
+>
+> `bean` PCD在实例级别（在Spring Bean名称概念上构建）而不是仅在类型级别（基于织入的AOP受到限制）。基于实例的切点标识符是Spring基于代理的AOP框架及其与Spring Bean Factory的紧密集成的特殊功能，在该工厂中，它是自然而直接的，可以按名称识别特定的bean。
+
+**组合切点表达式**
+
+您可以使用&&，||和 ！组合切点表达式。您也可以按名称参考点cut表达式。下面的示例显示了三个切点表达式：
+
+```java
+@Pointcut("execution(public * *(..))")
+private void anyPublicOperation() {} 
+
+@Pointcut("within(com.xyz.myapp.trading..*)")
+private void inTrading() {} 
+
+@Pointcut("anyPublicOperation() && inTrading()")
+private void tradingOperation() {} 
+```
+
+如前所述，用较小的命名组件来构建更复杂的切点表达式是一种最佳实践。当通过名称引用切点时，应用了正常的Java可见性规则（您可以在同一类型中看到私有切点、在层次结构中受保护的切点以及任何地方的公共切点等）。可见性不影响切点匹配。
+
+**共享公共的切点定义**
+
+在使用企业应用程序时，开发人员通常想引用应用程序的模块以及来自多个切面的特定操作集。我们建议定义一个CommonPointcuts切面，以捕获为此目的公共切点表达式。这样的切面通常类似于以下示例：
+
+```java
+package com.xyz.myapp;
+
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Pointcut;
+
+@Aspect
+public class CommonPointcuts {
+
+    /**
+     * A join point is in the web layer if the method is defined
+     * in a type in the com.xyz.myapp.web package or any sub-package
+     * under that.
+     */
+    @Pointcut("within(com.xyz.myapp.web..*)")
+    public void inWebLayer() {}
+
+    /**
+     * A join point is in the service layer if the method is defined
+     * in a type in the com.xyz.myapp.service package or any sub-package
+     * under that.
+     */
+    @Pointcut("within(com.xyz.myapp.service..*)")
+    public void inServiceLayer() {}
+
+    /**
+     * A join point is in the data access layer if the method is defined
+     * in a type in the com.xyz.myapp.dao package or any sub-package
+     * under that.
+     */
+    @Pointcut("within(com.xyz.myapp.dao..*)")
+    public void inDataAccessLayer() {}
+
+    /**
+     * A business service is the execution of any method defined on a service
+     * interface. This definition assumes that interfaces are placed in the
+     * "service" package, and that implementation types are in sub-packages.
+     *
+     * If you group service interfaces by functional area (for example,
+     * in packages com.xyz.myapp.abc.service and com.xyz.myapp.def.service) then
+     * the pointcut expression "execution(* com.xyz.myapp..service.*.*(..))"
+     * could be used instead.
+     *
+     * Alternatively, you can write the expression using the 'bean'
+     * PCD, like so "bean(*Service)". (This assumes that you have
+     * named your Spring service beans in a consistent fashion.)
+     */
+    @Pointcut("execution(* com.xyz.myapp..service.*.*(..))")
+    public void businessService() {}
+
+    /**
+     * A data access operation is the execution of any method defined on a
+     * dao interface. This definition assumes that interfaces are placed in the
+     * "dao" package, and that implementation types are in sub-packages.
+     */
+    @Pointcut("execution(* com.xyz.myapp.dao.*.*(..))")
+    public void dataAccessOperation() {}
+
+}
+```
+
+您可以在需要切点表达式的任何位置引用定义的切点。例如，要使服务层具有事务性，您可以编写以下内容：
+
+```xml
+<aop:config>
+    <aop:advisor
+        pointcut="com.xyz.myapp.CommonPointcuts.businessService()"
+        advice-ref="tx-advice"/>
+</aop:config>
+
+<tx:advice id="tx-advice">
+    <tx:attributes>
+        <tx:method name="*" propagation="REQUIRED"/>
+    </tx:attributes>
+</tx:advice>
+```
+
+`<aop：config>` 和`<aop：advisor>`元素在 [Schema-based AOP Support](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-schema)中讨论。事务元素在[Transaction Management](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/data-access.html#transaction)讨论。
+
+**示例**
+
+Spring AOP用户可能最常使用的切点标识符是`execution`。execution 表达式的格式如下：
+
+```java
+ execution(modifiers-pattern? ret-type-pattern declaring-type-pattern?name-pattern(param-pattern)
+                throws-pattern?)
+```
+
+除returning type pattern（ret-type-pattern），the name pattern，parameters pattern之外的所有部分可选的。 returning type pattern确定该方法的返回类型必须是什么，以便与连接点匹配。`*`最常用作returning type pattern，他匹配任何返回类型。仅当方法返回给定类型时，全限定的类型名称才匹配。name pattern与方法名称匹配。您可以将` *`通配符用作name pattern的全部或一部分。如果指定declaring type pattern，请使用`.`将其加入name pattern组件。parameters pattern稍微复杂一点：`()`与无参方法匹配，而`(..)`匹配任何数量的（0个或多个）参数。`(*)`与任何类型的单参数方法匹配。`(*,String)`匹配两个参数的方法。第一个可以是任何类型的，而第二个必须是String。有关更多信息，请咨询AspectJ Programming Guide的[Language Semantics](https://www.eclipse.org/aspectj/doc/released/progguide/semantics-pointcuts.html)。
+
+以下示例显示了一些常见的切点表达式：
+
+- 任何公共方法execution:
+
+  ```java
+      execution(public * *(..))
+  ```
+
+- 以set开头的任何方法execution:
+
+  ```java
+      execution(* set*(..))
+  ```
+
+- `AccountService` 接口定义的任何方法execution:
+
+  ```java
+      execution(* com.xyz.service.AccountService.*(..))
+  ```
+
+- `service` 包下的任何方法execution:
+
+  ```java
+      execution(* com.xyz.service.*.*(..))
+  ```
+
+- service 包或其子包中的任何方法execution:
+
+  ```java
+      execution(* com.xyz.service..*.*(..))
+  ```
+
+- service 包下任何连接点(Spring AOP中的方法执行) :
+
+  ```java
+      within(com.xyz.service.*)
+  ```
+
+- service 包或其子包中的任何连接点(Spring AOP中的方法执行) :
+
+  ```java
+      within(com.xyz.service..*)
+  ```
+
+- 实现 `AccountService` 接口的代理的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+      this(com.xyz.service.AccountService)
+  ```
+
+> :information_source:“this”更常用于绑定形式。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使代理对象在通知主体中可用的章节。
+
+- 实现 `AccountService` 接口的目标对象的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+   target(com.xyz.service.AccountService)
+  ```
+
+  > :information_source:“target”更常用于绑定形式。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使目标对象在通知主体中可用的章节。
+
+- 单参数且实参是Serializable的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+       args(java.io.Serializable)
+  ```
+
+> :information_source:“args”更常用于绑定形式。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使方法参数在通知主体中可用的章节。
+
+​	  请注意，此示例中给出的切点与execution(* *(java.io.Serializable))不同。如果在运行时传递的参数是Serializable，  	  则args模式匹配，如果方法签名是声明类型为Serializable的单个参数，则execution模式匹配。
+
+- 有@Transactional的目标对象的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+    @target(org.springframework.transaction.annotation.Transactional)
+  ```
+
+  > :information_source:你也可以以绑定形式使用“@target”。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使注解对象在通知主体中可用的章节。
+
+- 目标对象的声明类型有@Transactional的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+       @within(org.springframework.transaction.annotation.Transactional)
+  ```
+
+> :information_source:你也可以以绑定形式使用“@within”。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使注解对象在通知主体中可用的章节。
+
+- 有@Transactional的执行方法的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+  @annotation(org.springframework.transaction.annotation.Transactional)
+  ```
+
+  > :information_source:你也可以以绑定形式使用“@annotation”。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使注解对象在通知主体中可用的章节。
+
+- 单参数且实参类型为@Classified注解的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+  @args(com.xyz.security.Classified)
+  ```
+
+> :information_source:你也可以以绑定形式使用“@args”。请参阅[Declaring Advice](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-advice) 中关于如何使注解对象在通知主体中可用的章节。
+
+- 名为`tradeService`的Spring bean的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+  bean(tradeService)
+  ```
+
+- 名称匹配通配符表达式`*Service`的Spring bean的任何连接点(Spring AOP中的方法执行):
+
+  ```java
+  bean(*Service)
+  ```
+
+
+
+**编写良好的切点**
+
+在编译期间，AspectJ处理切点以优化匹配性能。检查代码并确定每个连接点是否匹配（静态或动态）给定的切点是一个昂贵的过程。动态匹配意味着该匹配不能从静态分析中完全确定，并且在代码中增加了测试以确定代码运行时是否存在实际匹配）。在第一次遇到切点声明时，AspectJ将其重写为最佳形式。这是什么意思？基本上，切点以DNF（析取范式）重写，并且对切点的组件进行排序，以便首先检查那些要较容易计算的的组件。这意味着您不必担心理解各个切点标识符的性能，并且可以任何顺序声明切点。
+
+但是，AspectJ只能与所指出的内容一起使用。为了获得最佳的匹配性能，您应该考虑他们试图实现的目标，并在定义中尽可能多地缩小匹配的搜索空间。现有的标识符自然会分为三个组：kinded，scoping和contextual：
+
+- Kinded 标识符选择一种特定的连接点：execution，get，set，call和handler。
+- Scoping标识符选择一组感兴趣的连接点（可能是多种）：within和withincode
+- Contextual标识符基于上下文匹配（并选择性地绑定）：this，target和@annotation
+
+良好的切点至少应包括前两种类型（Kinded和Scoping）。您可以包括Contextual标识符以基于切点上下文匹配或绑定上下文以便在通知中使用。仅提供Kinded标识符或仅提供Contextual标识符可以正常工作，但由于额外的处理和分析，可能会影响织入性能（时间和内存）。Scoping标识符匹配非常速地，并且使用它们意味着AspectJ可以很快驳回不应进一步处理的连接点组。如果可能的话，应始终包含一个良好的切点。
+
+
+
+### 5.4.4. 声明通知
+
+通知与切点表达式相关联，并在与切点匹配的方法执行之前，之后或周期内执行。切点表达式可以是对已命名切点的简单引用，也可以是声明的切点表达式。
+
+**Before通知**
+
+您可以通过使用@Before在某个切面声明通知：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+
+@Aspect
+public class BeforeExample {
+
+    @Before("com.xyz.myapp.CommonPointcuts.dataAccessOperation()")
+    public void doAccessCheck() {
+        // ...
+    }
+}
+```
+
+如果我们使用直接的切点表达式，则可以将上一个示例重写为以下示例：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+
+@Aspect
+public class BeforeExample {
+
+    @Before("execution(* com.xyz.myapp.dao.*.*(..))")
+    public void doAccessCheck() {
+        // ...
+    }
+}
+```
+
+**After Returning通知**
+
+After returning通知在匹配的方法执行正常返回后运行。您可以使用@AfterReturning来声明它：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.AfterReturning;
+
+@Aspect
+public class AfterReturningExample {
+
+    @AfterReturning("com.xyz.myapp.CommonPointcuts.dataAccessOperation()")
+    public void doAccessCheck() {
+        // ...
+    }
+}
+```
+
+> :information_source:您可以在同一切面拥有多个通知声明（以及其他成员）。在这些示例中，我们仅显示一个通知声明，以集中每个示例的效果。
+
+有时，您需要在通知主体中访问返回的实际值。您可以使用@AfterReturning的形式绑定返回值以访问，如以下示例所示：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.AfterReturning;
+
+@Aspect
+public class AfterReturningExample {
+
+    @AfterReturning(
+        pointcut="com.xyz.myapp.CommonPointcuts.dataAccessOperation()",
+        returning="retVal")
+    public void doAccessCheck(Object retVal) {
+        // ...
+    }
+}
+```
+
+returning属性中使用的名称必须对应于通知方法中的参数名称。当方法执行返回时，返回值将作为相应的参数值传递给通知方法。returning子句还限制了仅匹配到那些返回指定类型的方法执行（在这个案例下为Object，与任何返回值匹配）。
+
+请注意，使用after returning通知时，不可能返回完全不同的引用。
+
+**After Throwing 通知**
+
+After throwing 通知在匹配的方法执行抛出异常退出后运行。您可以使用@AfterThrowing来声明它：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.AfterThrowing;
+
+@Aspect
+public class AfterThrowingExample {
+
+    @AfterThrowing("com.xyz.myapp.CommonPointcuts.dataAccessOperation()")
+    public void doRecoveryActions() {
+        // ...
+    }
+}
+```
+
+通常，您只希望在抛出给定类型的异常时才运行通知，并且通常还需在通知主体中访问抛出的异常。您可以使用throwing属性限制匹配（如果需要--否则别用Throwable）并将抛出的异常绑定到通知参数。以下示例显示了如何做到的：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.AfterThrowing;
+
+@Aspect
+public class AfterThrowingExample {
+
+    @AfterThrowing(
+        pointcut="com.xyz.myapp.CommonPointcuts.dataAccessOperation()",
+        throwing="ex")
+    public void doRecoveryActions(DataAccessException ex) {
+        // ...
+    }
+}
+```
+
+throwing属性中使用的名称必须对应于通知方法中的参数名称。当方法执行抛出异常退出时，异常将作为相应的参数值传递给通知方法。throwing子句还限制了仅匹配到那些抛出指定类型异常的方法执行（在这个案例下为DataAccessException）。
+
+> :information_source:请注意， @AfterThrowing并不表示一般异常处理回调。具体来说， @AfterThrowing的通知方法只能从连接点（用户指定目标方法）本身接收异常，而不是从随附的 @After或@AfterReturning方法中接收异常。
+
+
+
+**After（Finally）通知**
+
+After (finally)通知在匹配的方法执行退出时运行。它是通过使用 @After来声明的。After 通知，必须准备好处理正常和异常返回条件。它通常用于释放资源和类似目的。下面的示例显示了如何使用 after finally通知：
+
+```java
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.After;
+
+@Aspect
+public class AfterFinallyExample {
+
+    @After("com.xyz.myapp.CommonPointcuts.dataAccessOperation()")
+    public void doReleaseLock() {
+        // ...
+    }
+}
+```
+
+> :information_source:请注意， @AspectJ 中的@After通知被定义为"after finally advice"，类似于在try-catch语句中的finally 。与仅适用于成功的正常返回的@AfterReturning相比，连接点（用户指定目标方法）正常返回或异常终止时该通知都会被调用。
+
+**Around通知**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
